[gd_scene format=3 uid="uid://81ewuhvo6cub"]

[ext_resource type="Script" uid="uid://beyiwhk7ag6fr" path="res://addons/squawkbox/dialogue_node.gd" id="1_4s6cr"]
[ext_resource type="Texture2D" uid="uid://drnc0mllec8vl" path="res://addons/squawkbox/default_character_portrait.png" id="1_7w4j4"]
[ext_resource type="Texture2D" uid="uid://b6nv56sovsn68" path="res://addons/squawkbox/add_slot_icon.svg" id="2_p2kk4"]
[ext_resource type="Texture2D" uid="uid://cdfba1j7lyyp" path="res://addons/squawkbox/close_icon.svg" id="3_p2kk4"]

[node name="DialogueNode" type="GraphNode" unique_id=832121121]
offset_right = 391.0
offset_bottom = 215.0
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_4s6cr")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1419376240]
layout_mode = 2

[node name="CharacterPortrait" type="TextureRect" parent="HBoxContainer" unique_id=1450817587]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("1_7w4j4")
expand_mode = 1

[node name="CharacterSelect" type="OptionButton" parent="HBoxContainer" unique_id=602749921]
layout_mode = 2

[node name="AddReplyOptionBtn" type="TextureButton" parent="HBoxContainer" unique_id=156723818]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture_normal = ExtResource("2_p2kk4")
ignore_texture_size = true
stretch_mode = 5

[node name="Panel" type="Panel" parent="HBoxContainer" unique_id=2097488124]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeleteNodeBtn" type="TextureButton" parent="HBoxContainer" unique_id=444815245]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture_normal = ExtResource("3_p2kk4")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="." unique_id=1597314807]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer2" unique_id=471415015]
layout_mode = 2
text = "Dialogue:"

[node name="TextEdit" type="TextEdit" parent="HBoxContainer2" unique_id=990864546]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter dialogue text"
wrap_mode = 1
scroll_fit_content_height = true

[connection signal="item_selected" from="HBoxContainer/CharacterSelect" to="." method="_on_character_select_item_selected"]
[connection signal="pressed" from="HBoxContainer/AddReplyOptionBtn" to="." method="_on_add_reply_option_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/DeleteNodeBtn" to="." method="_on_delete_node_btn_pressed"]
